--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <div class="resultado"></div>
+    <ul class="ingredientes"></ul>
     <script src="./js/main.js"></script>
   </body>
 </html>
