--- a/index.html
+++ b/index.html
@@ -5,11 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>&lt;J/G&gt; | Web Dev</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <header>
+      <a href="#">
+        <h1>Cocktail</h1>
+        <div>
+          <img src="./img/logo.jpg" alt="Cocktail Calculator Logo" />
+        </div>
+        <h1>Calculator</h1>
+      </a>
+    </header>
+
+    <section id="preview">
+      <!--? todo esto en sliders -->
+    </section>
+
+    <section>
+      <h1>Calculadora</h1>
+      <p>
+        Nuestra Calculadora para Cocteles se creó teniendo en cuenta las
+        necesidades de bares y barras para eventos, sin embargo, tambien es muy
+        útil para compleaños y reuniones.
+      </p>
+      <p>
+        ¿Siempre quisiste saber cuantas y qué botellas necesitarias para hacer
+        25 vasos de Cuba Libre? ¡Ahora podrás saberlo!
+      </p>
+      <div>
+        <button
+          type="button"
+          class="btn btn-outline-info btn-rounded btn--ingredientes"
+          data-mdb-ripple-color="dark"
+        >
+          Ingredientes
+        </button>
+        <button
+          type="button"
+          class="btn btn-outline-warning btn-rounded btn--cocteles"
+          data-mdb-ripple-color="dark"
+        >
+          Cocteles
+        </button>
+      </div>
+    </section>
+
+    <section id="DOM"></section>
+
+    <footer>
+      <div>
+        <ul>
+          <li>Redes</li>
+        </ul>
+      </div>
+    </footer>
     <div class="resultado"></div>
     <ul class="ingredientes"></ul>
     <script src="./js/main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
