Sorting Options Added(Incomplete for Ingr)

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
           class="btn btn-outline-info btn-rounded btn--ingredientes"
           data-mdb-ripple-color="dark"
         >
-          Ingredientes
+          Ver Ingredientes
         </button>
         <button
           type="button"
           class="btn btn-outline-warning btn-rounded btn--cocteles"
           data-mdb-ripple-color="dark"
         >
-          Cocteles
+          Ver Cocteles
         </button>
       </div>
     </section>
