--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>
         Nuestra Calculadora para Cocteles se creó teniendo en cuenta las
         necesidades de bares y barras para eventos, sin embargo, tambien es muy
-        útil para compleaños y reuniones.
+        útil para cumpleaños y reuniones.
       </p>
       <p>
         ¿Siempre quisiste saber cuantas y qué botellas necesitarias para hacer
