--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         ¿Siempre quisiste saber cuantas y qué botellas necesitarias para hacer
         25 vasos de Cuba Libre? ¡Ahora podrás saberlo!
       </p>
-      <div>
+      <div id="btn-DOM">
         <button
           type="button"
-          class="btn btn-outline-info btn-rounded btn--ingredientes"
+          class="btn btn-outline-danger btn-rounded btn--ingredientes"
           data-mdb-ripple-color="dark"
         >
           Ver Ingredientes
         </button>
         <button
           type="button"
-          class="btn btn-outline-warning btn-rounded btn--cocteles"
+          class="btn btn-outline-info btn-rounded btn--cocteles"
           data-mdb-ripple-color="dark"
         >
           Ver Cocteles
