--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <section id="DOM"></section>
-
+    <section id="Calculator"></section>
     <footer>
       <div>
         <ul>
