Calculator in Progress (Ingredients Pending)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
     </section>
 
     <section id="DOM"></section>
-    <section id="Calculator"></section>
+    <section id="calculator">
+      <div class="calc-cocktails"></div>
+      <div class="calc-ingredients"></div>
+    </section>
     <footer>
       <div>
         <ul>
